Revision history for PURL

{{$NEXT}}
    - Actually document the "from-identity" method

0.0.5  2025-07-21T13:22:28+02:00
    - Bump dependency on Identity::Utils because we can

0.0.4  2025-07-20T12:47:06+02:00
    - Made sure that gisting stringifies
    - Added dependency on "Identity::Utils"
    - Added preliminary support for the "raku" type
    - Added method "from-identity" to create a PURL from a
      Raku module identity

0.0.3  2025-07-19T20:18:23+02:00
    - Abstracted the different checking / canonicalization
      behaviours into a PURL::Type base class, and a subclass
      for each supported type.  And use that logic when
      instantiating a PURL object
    - Added introspection methods "description" and "examples"
      to PURL::Type
    - UnTODO almost all TODO tests in test-suite
    - Add a test-file that checks the validity of all PURLs
      as given in the PURL documentation

0.0.2  2025-07-17T20:23:17+02:00
    - Fix thinko in validity check
    - Make stringification return the canonical URL
    - Added stringification tests (with some todo's)

0.0.1  2025-07-17T16:12:27+02:00
    - Initial version