@@ -1,4 +1,4 @@
-use Identity::Utils:ver<0.0.20+>:auth<zef:lizmat> <
+use Identity::Utils:ver<0.0.24+>:auth<zef:lizmat> <
   api auth is-pinned short-name ver
 >;
 use JSON::Fast:ver<0.19+>:auth<cpan:TIMOTIMO>;
