@@ -147,8 +147,9 @@ raku
 pkg:raku/zef:lizmat/SBOM::CycloneDX@0.07
 pkg:raku/cpan:TIMOTIMO/JSON::Fast@0.19
 pkg:raku/zef:vrurg/Cro::RPC::JSON@0.1.6/2
-pkg:raku/zef:lizmat/SBOM::CycloneDX@0.07?download_url=https://360.zef.pm/S/BO/SBOM_CYCLONEDX/e9df9ac7d473c289aae4df19ea10c0289bb04851.tar.gz&repository_url=https://github.com/lizmat/SBOM-CycloneDX
-pkg:raku/cpan:TIMOTIMO/JSON::Fast@0.19?download_url=https://cpan.metacpan.org/authors/id//T/TI/TIMOTIMO/Perl6/JSON-Fast-0.19.tar.gz&repository_url=https://github.com/timo/json_fast
+pkg:raku/zef:lizmat/駱駝道@0.0.1
+pkg:raku/zef:lizmat/SBOM::CycloneDX@0.07?download_url=https://360.zef.pm/S/BO/SBOM_CYCLONEDX/e9df9ac7d473c289aae4df19ea10c0289bb04851.tar.gz
+pkg:raku/cpan:TIMOTIMO/JSON::Fast@0.19?download_url=https://cpan.metacpan.org/authors/id//T/TI/TIMOTIMO/Perl6/JSON-Fast-0.19.tar.gz
 
 rpm
 pkg:rpm/fedora/curl@7.50.3-1.fc25?arch=i386&distro=fedora-25
